# ChangeLog for dev-cpp/glibmm
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.48 2005/08/30 01:01:20 ka0ttic Exp $

*glibmm-2.7.3 (30 Aug 2005)

  30 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> +glibmm-2.7.3.ebuild:
  Version bump.

  27 Aug 2005; Marcus D. Hanwell <cryos@gentoo.org> glibmm-2.6.1.ebuild:
  Marked stable on amd64.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> glibmm-2.6.1.ebuild:
  stable on ia64

  03 Aug 2005; Bryan Østergaard <kloeri@gentoo.org> glibmm-2.4.7-r1.ebuild:
  Stable on alpha.

*glibmm-2.7.2 (01 Aug 2005)

  01 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> +glibmm-2.7.2.ebuild:
  Version bump.

  27 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> glibmm-2.6.1.ebuild:
  Re-add missing ~mips keyword.

  21 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> -glibmm-2.7.1.ebuild:
  Remove testing ebuild.

  17 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> glibmm-2.6.1.ebuild,
  glibmm-2.7.1.ebuild:
  Fix glib deps.

  07 Jul 2005; Ilya A. Volynets-Evenbach <iluxa@gentoo.org>
  glibmm-2.4.7-r1.ebuild:
  add ~mips to keywords

  05 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> glibmm-2.6.1.ebuild:
  Stable on hppa.

  03 Jul 2005; Michael Hanselmann <hansmi@gentoo.org> glibmm-2.6.1.ebuild:
  Stable on ppc.

  28 Jun 2005; Markus Rothe <corsair@gentoo.org> glibmm-2.6.1.ebuild:
  Stable on ppc64

  28 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> glibmm-2.6.1.ebuild:
  Stable on sparc

*glibmm-2.7.1 (28 Jun 2005)

  28 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> glibmm-2.4.4.ebuild,
  glibmm-2.4.7-r1.ebuild, glibmm-2.6.1.ebuild, +glibmm-2.7.1.ebuild:
  Version bump; 2.6.1 stable on x86. Fixed deps.

  04 Jun 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  glibmm-2.4.7-r1.ebuild:
  Stable on ppc.

  18 May 2005; Markus Rothe <corsair@gentoo.org> glibmm-2.4.7-r1.ebuild:
  Stable on ppc64

  11 May 2005; Rene Nussbaumer <killerfox@gentoo.org>