@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/glibmm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.48 2005/08/30 01:01:20 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.49 2005/09/09 11:30:37 ka0ttic Exp $
+
+*glibmm-2.8.0 (09 Sep 2005)
+
+  09 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> -glibmm-2.7.2.ebuild,
+  -glibmm-2.7.3.ebuild, +glibmm-2.8.0.ebuild:
+  Version bump; remove old 2.7.x releases.
 
 *glibmm-2.7.3 (30 Aug 2005)
 
